fix scrolling gap

--- a/src/components/TitleScroll/titlescroll.module.css
+++ b/src/components/TitleScroll/titlescroll.module.css
@@ -3,7 +3,7 @@
         transform: translateX(0);
     }
     100% {
-        transform: translateX(calc(-1 * var(--scroll-width)));
+        transform: translateX(calc(-1 * (var(--scroll-width) + 5rem)));
     }
 }
 
@@ -11,21 +11,23 @@
     display: flex;
     overflow: hidden;
     position: relative;
+    border-bottom: 1px solid var(--white);
+    border-top: 1px solid var(--white);
+    gap: 5rem;
     
 }
 
 .projectstitle {
     min-width: var(--scroll-width);
+    height: 5rem;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 5rem;
     color: var(--light-green);
-    padding: 0.5rem 1rem;
-    border-bottom: 1px solid var(--white);
-    border-top: 1px solid var(--white);
+
     white-space: nowrap;
-    animation: titlemove 15s linear infinite;
+    animation: titlemove 10s linear infinite;
 }
 
 .projectstitle>h2 {
